# codex-bedrock

./: .gitignore  LICENSE  NOTICE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
proxy/: pyproject.toml
proxy/src/codex_bedrock/: app.py  auth.py  config.py  main.py  schema.py
proxy/src/codex_bedrock/models/: base.py  bedrock.py
proxy/src/codex_bedrock/routers/: chat.py  models.py  responses.py
src/: index.ts
src/commands/: setup.ts  start.ts  status.ts  stop.ts
src/utils/: aws.ts  codex.ts  config.ts  paths.ts  proxy.ts  shell.ts
