[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-bedrock-proxy"
version = "0.1.0"
description = "OpenAI Responses API proxy for AWS Bedrock — powers codex-bedrock"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.29.0",
  "boto3>=1.34.0",
  "pydantic>=2.0.0",
  "tiktoken>=0.7.0",
  "numpy>=1.26.0",
]

[project.scripts]
codex-bedrock-proxy = "codex_bedrock.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_bedrock"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
